After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 703769 - Fix the look of some buttons
Fix the look of some buttons
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: general
3.9.x
Other Linux
: Normal normal
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-07-08 09:01 UTC by Yosef Or Boczko
Modified: 2013-07-12 09:19 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
main: Fix the look of lock button (878 bytes, patch)
2013-07-08 09:01 UTC, Yosef Or Boczko
committed Details | Review
region: Fix the look of login button (1013 bytes, patch)
2013-07-08 09:01 UTC, Yosef Or Boczko
committed Details | Review
mouse: Fix the look of test button (877 bytes, patch)
2013-07-08 09:02 UTC, Yosef Or Boczko
committed Details | Review
Screenshot - before (21.28 KB, image/png)
2013-07-11 23:12 UTC, Yosef Or Boczko
  Details
Screenshot - after (21.30 KB, image/png)
2013-07-11 23:12 UTC, Yosef Or Boczko
  Details

Description Yosef Or Boczko 2013-07-08 09:01:01 UTC
See patches.
Comment 1 Yosef Or Boczko 2013-07-08 09:01:36 UTC
Created attachment 248580 [details] [review]
main: Fix the look of lock button
Comment 2 Yosef Or Boczko 2013-07-08 09:01:54 UTC
Created attachment 248581 [details] [review]
region: Fix the look of login button
Comment 3 Yosef Or Boczko 2013-07-08 09:02:08 UTC
Created attachment 248582 [details] [review]
mouse: Fix the look of test button
Comment 4 Yosef Or Boczko 2013-07-11 23:12:16 UTC
Created attachment 248977 [details]
Screenshot - before
Comment 5 Yosef Or Boczko 2013-07-11 23:12:31 UTC
Created attachment 248978 [details]
Screenshot - after
Comment 6 Bastien Nocera 2013-07-12 08:14:56 UTC
Review of attachment 248580 [details] [review]:

Looks good. The prefix is "shell: " though, not "main: "
Comment 7 Bastien Nocera 2013-07-12 08:15:25 UTC
Review of attachment 248581 [details] [review]:

Looks fine.
Comment 8 Bastien Nocera 2013-07-12 08:15:48 UTC
Review of attachment 248582 [details] [review]:

Looks fine.
Comment 9 Yosef Or Boczko 2013-07-12 08:24:57 UTC
Review of attachment 248580 [details] [review]:

pushed as 79d2fc7 - shell: Fix the look of lock button
Comment 10 Yosef Or Boczko 2013-07-12 08:25:04 UTC
Review of attachment 248580 [details] [review]:

pushed as 79d2fc7 - shell: Fix the look of lock button
Comment 11 Yosef Or Boczko 2013-07-12 08:26:14 UTC
Review of attachment 248581 [details] [review]:

pushed as 720f1b4 - region: Fix the look of login button
Comment 12 Yosef Or Boczko 2013-07-12 08:26:47 UTC
Review of attachment 248582 [details] [review]:

pushed as 4678863 - mouse: Fix the look of test button