shell: Fix the look of lock button

https://bugzilla.gnome.org/show_bug.cgi?id=703769